# materialgraph

./: .env.example  .gitignore  README.md  alembic.ini  audit_material_composition_coverage.py  check_material_fractions.py  docker-compose.yml  inspect_material_raw_data.py  material_quality_local_check.py  pyproject.toml  requirements-dev.txt  requirements.txt  t `
alembic/: env.py
alembic/versions/: 1d204c6d38c0_create_core_domain_models.py  4368e3ecc291_create_initial_material_tables.py  f1a8b10be960_add_graph_jobs_table.py
app/: main.py
app/core/: config.py  database.py  logging.py  performance.py
app/models/: __init__.py  application.py  element.py  element_risk_profile.py  graph_job.py  material.py  material_application.py  material_element.py  risk_factor.py
app/schemas/: application.py  comparison.py  discovery.py  discovery_graph.py  element.py  graph_job.py  material.py  risk.py  (+13 more)
docs/: CHANGE_IMPACT_HISTORY.md  MATERIALGRAPH_AUDIT_RESOLUTION.md  MATERIALGRAPH_ENGINEERING_STRENGTHS.md  MaterialGraph_Architecture_Implementation_Audit_v2_Regenerated.md  getting_started.md  known_issues.md  milestone.md  performance_baseline.md  phase_1_review.md  system_architecture.md  what_should_be_materialgraph.md
materialgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backfill_material_element_fractions.py  check_import_counts.py  cleanup_test_materials.py  import_materials_project.py  seed_core_data.py  seed_material_applications.py  seed_risk_profiles.py
tests/: conftest.py  test_health.py  test_read_apis.py  test_scientific_facts_semantics.py
(+166 files in other folders)
